crates/wiki-reader-render/src/snapshots/wiki_reader_render__tests__expanded_frontmatter_40.snap
---
source: crates/wiki-reader-render/src/lib.rs
assertion_line: 841
expression: text
---
── frontmatter ▾ ───────────────────────
title:   Hello
tags:   
  - a
  - b
updated: 2026-01-01
────────────────────────────────────────

Body
────────────────────────────────────────
